tests/spec/compile-fail/061_vector_reserve_with_live_slice.zn
// category: compile-fail
// profile: freestanding
// purpose: reserve is a structural Vector mutation and is rejected while a dependent slice is live

module tests.fail.vectorReserveWithLiveSlice;

import core.alloc.{AllocError, GlobalAllocator};
import core.result.Result;

fn bad(mut allocator: GlobalAllocator) -> Result<USize, AllocError> {
    var bytes = Vector<U8>.withCapacityIn(4, mut allocator);
    let view = bytes.asSlice();
    bytes.reserve(8); // expected-error: vector structural mutation while slice is live
    return Ok(view.len);
}
